...
    <plurals name="studyoptions_buried_count">
        <item quantity="other">+%d buried</item>
    </plurals>

    <!-- Card editor -->
    <string name="cardeditor_title_edit_card" maxLength="28">Edit note</string>
    <string name="discard">Discard</string>
    <string name="note_editor_no_cards_created">No cards created. Please fill in more fields</string>
    <string name="note_editor_no_cards_created_all_fields">The current note type did not produce any cards.\nPlease choose another note type, or click ‘Cards’ and add a field substitution</string>
    <string name="note_editor_insert_cloze_no_cloze_note_type">Cloze deletions will only work on a Cloze note type</string>
    <string name="saving_facts">Saving note</string>
    <string name="saving_model">Saving note type</string>
    <string name="save" maxLength="28">Save</string>
...
        ]]>
    </string>
    <string name="export_choice_share">Share</string>
    <string name="export_choice_save_to">Save to</string>
    <string name="export_saving_exported_collection">Saving exported file&#8230;</string>
    <string name="study_options" comment="Name for a preference category in Filtered deck (aka Cram deck, aka Custom study) options" maxLength="28">Options</string>
    <string name="menu__deck_options" maxLength="28">Deck options</string>
    <string name="menu__study_options" comment="Menu item that opens options for a Filtered deck (aka Cram deck, aka Custom study)">Study options</string>
    <string name="select_tts" maxLength="28">Set TTS language</string>
    <string name="custom_study" maxLength="28">Custom study</string>
    <string name="more_options">More</string>
    <string name="dyn_deck_desc">This is a special deck for studying outside of the normal schedule. Cards will be automatically returned to their original decks after you review them. Deleting this deck from the deck list will return all remaining cards to their original deck.</string>
    <string name="steps_error">Steps must be numbers greater than 0</string>
...
